  wouldn't be practical, and shouldn't generally be as interesting as the main
  game anyway.  Fixes #835

--Fleeing and random-moving objects can now cross biome boundaries if they
  don't have a biome number set.  So, for example, an escaped riding horse is
  no longer biome-bound, while rattle snakes and other animals native to
  specific biomes will still stay in their biome.  Fixes #836




Server Fixes

--Fixed so that if you destroy a property gate, ownership is removed correctly.
  Before, the ownership record for that x,y location would linger, breaking
  "you own this" as well as construction of new owned gates at that same spot.
  Fixes #831

--You have to be closer than 20 tiles away from a gate to assign ownership of
  it to someone else.  Part of #832

--You can't name a person to give property (with BOB SMITH OWNS THIS) if the
  target person is more than 200 tiles away.  Also, the target person, if they
  are successfully given property, gets a speech-bubble message about it.  This
  message does not include a map pointer, so it won't disrupt their current
  pointer, but they can always ask for a pointer to their new property with the
  /PROPERTY command.  Fixes #832

--Fitness server backend now allows admin to search by leaderboard name.

--Support for tapoutTriggers clearing ownership.
  Part of jasonrohrer/OneLifeData7#1011







Version 374    2023-June-9

--Fixed photo aiming/placement on screen resolutions other than 1280x720.
  Thanks Twisted.  Fixes #827

--Transitions that require unsed items now show (FRESH) or (FULL) in crafting
  hints.  For example, you can see that a pie requires a full bowl of berries,
  and you can see that a diesel mining pick requires a fresh chisel.




Server Fixes

--Now re-sends curse token status upon reconnection.  Thanks Cordy.  Fixes #821

--When the container that we're holding changes size suddenly (like when riding
  over something deadly that tips the horse cart), we temporarily throw the